# raytracer

./: .gitignore  BVH_node.h  CMakeLists.txt  README.md  box.txt  camera.h  constants.h  final.txt  hit.cpp  lightbox.txt  main.cpp  material.cpp  obj-test.txt  object.cpp  object.h  parser.cpp  parser.h  pedestal.txt  pixels.h  random.h  ray.cpp  test-parser.txt  texture.cpp  threading-example.cpp  vector3d.h  world.h
src/: main.cpp
src/engine/include/: color.h  engine.h  hit.h  hitbox.h  material.h  ray.h  texture.h  triangle_math.h
src/engine/src/: BVH_node.cpp  camera.cpp  hitbox.cpp  parser.cpp  pixels.cpp  random.cpp  test-parser.cpp  vector3d.cpp  world.cpp
test/: CMakeLists.txt  final.txt  input.txt  input2.txt  pyramid-test.txt  tris.txt
